[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nnt"
authors = [
    {name = "Jon Morton", email = "jon@jamorton.com"},
]
description = "Common utilities for neural network training in pytorch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: ",
]
dependencies = [
    "iopath",
    "numpy",
    "torch",
    "tabulate",
]
version = "0.1.0"
